--- a/app/src/main/res/layout/activity_my_screens.xml
+++ b/app/src/main/res/layout/activity_my_screens.xml
@@ -27,33 +27,21 @@
             app:contentInsetLeft="0dp"
             app:contentInsetRight="0dp"
             app:contentInsetStart="0dp"
-            android:layoutDirection="ltr"
-    >
-        <include layout="@layout/on_off_connect_device"/>
+            android:layoutDirection="ltr">
+
+        <include layout="@layout/on_off_connect_device" />
 
     </androidx.appcompat.widget.Toolbar>
-    <!--<androidx.appcompat.widget.Toolbar-->
 
-            <!--android:id="@+id/toolbar"-->
-            <!--app:contentInsetLeft="0dp"-->
-            <!--app:contentInsetStart="0dp"-->
-            <!--app:contentInsetRight="0dp"-->
-            <!--app:contentInsetEnd="0dp"-->
-            <!--app:layout_constraintLeft_toLeftOf="parent"-->
-            <!--app:layout_constraintRight_toRightOf="parent"-->
-            <!--app:layout_constraintTop_toTopOf="parent"-->
-            <!--android:layout_height="wrap_content" android:layout_width="match_parent"/>-->
-
-
-    <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/tvShowLogs"
-                android:text="sansoGaurd"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                android:visibility="gone"/>
+    <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/tvShowLogs"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="sansoGaurd"
+            android:visibility="gone"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
 
     <com.sensoguard.trailmanager.classes.NonSwipeAbleViewPager
@@ -68,26 +56,10 @@
     >
 
 
-        <!--        <com.google.android.material.tabs.TabLayout-->
-        <!--                android:id="@+id/tab_layout"-->
-        <!--                android:layout_width="match_parent"-->
-        <!--                android:layout_height="wrap_content"-->
-        <!--                app:tabTextColor="@color/white1"-->
-        <!--                app:tabSelectedTextColor="@color/black"-->
-        <!--                app:tabIndicatorColor="@color/black"-->
-        <!--                app:tabIndicatorHeight="4dp"-->
-        <!--                app:tabIndicatorGravity="bottom"-->
-        <!--                app:tabIndicatorFullWidth="true"-->
-        <!--                app:tabPaddingStart="0dp"-->
-        <!--                app:tabPaddingEnd="0dp"-->
-
         />
 
 
     </com.sensoguard.trailmanager.classes.NonSwipeAbleViewPager>
-
-    <!--</androidx.appcompat.widget.Toolbar>-->
-
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
