--- a/app/src/main/res/layout/custom_add_recipient_to_email.xml
+++ b/app/src/main/res/layout/custom_add_recipient_to_email.xml
@@ -10,7 +10,6 @@
             android:id="@+id/tvCommandTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/arialmt"
             android:gravity="center_horizontal"
             android:text="@string/email_title"
             android:textColor="@color/medium_green"
@@ -43,13 +42,12 @@
             app:layout_constraintTop_toTopOf="@+id/tvEmail1" />
 
 
-    <TextView
+    <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/tvEmail1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="48dp"
-            android:fontFamily="@font/arialmt"
             android:lineSpacingExtra="-9.9sp"
             android:text="@string/email1"
             android:textColor="@color/black"
@@ -67,7 +65,6 @@
             android:layout_width="90dp"
             android:layout_height="31.7dp"
             android:background="@color/medium_green"
-            android:fontFamily="@font/arialmt"
             android:lineSpacingExtra="-9.9sp"
             android:text="@string/send"
             android:textAllCaps="false"
@@ -76,12 +73,11 @@
             app:layout_constraintEnd_toEndOf="@+id/etField1"
             app:layout_constraintTop_toTopOf="@+id/btnCancel" />
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btnCancel"
             android:layout_width="90dp"
             android:layout_height="31.7dp"
             android:background="@color/red4"
-            android:fontFamily="@font/arialmt"
             android:lineSpacingExtra="-9.9sp"
             android:text="@string/cancel"
             android:textAllCaps="false"
