--- a/app/src/main/res/layout/fragment_configuration.xml
+++ b/app/src/main/res/layout/fragment_configuration.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.core.widget.NestedScrollView
-        xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fillViewport="true">
@@ -10,8 +8,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-        android:background="@color/gray2"
->
+            android:background="@color/gray2">
 
         <ProgressBar
                 android:id="@+id/pbValidationEmail"
@@ -88,7 +85,6 @@
                 android:text="@string/save"
                 android:textColor="@color/gray2"
                 android:textSize="13.3sp"
-                android:fontFamily="@font/arialmt"
          />
 
 
@@ -132,7 +128,6 @@
                 android:text="@string/choose_alarm_sound"
                 android:textColor="@color/turquoise_blue"
                 android:textSize="10sp"
-                android:fontFamily="@font/arialmt"
                 android:layout_marginStart="64.7dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -154,7 +149,7 @@
                 app:layout_constraintHorizontal_bias="0.654"
                 android:id="@+id/btnDefault"/>
 
-        <tools:ToggleButton
+        <ToggleButton
                 android:id="@+id/togChangeAlarmSound"
                 android:text="ToggleButton"
                 android:layout_width="44dp"
@@ -207,7 +202,7 @@
                 app:layout_constraintStart_toStartOf="parent"
         />
 
-        <tools:ToggleButton
+        <ToggleButton
                 android:id="@+id/togChangeAlarmVibrate"
                 android:text="ToggleButton"
                 android:layout_width="44dp"
@@ -288,7 +283,6 @@
                 android:text="@string/save"
                 android:textColor="@color/gray2"
                 android:textSize="13.3sp"
-                android:fontFamily="@font/arialmt"
         />
 
         <View android:layout_width="match_parent"
@@ -327,7 +321,7 @@
                 app:layout_constraintStart_toStartOf="parent"
         />
 
-        <tools:ToggleButton
+        <ToggleButton
                 android:id="@+id/togChangeLoadSettings"
                 android:text="ToggleButton"
                 android:layout_width="44dp"
@@ -394,7 +388,6 @@
                 android:textColor="@drawable/selected_text_color_status"
                 android:textAllCaps="false"
                 android:textSize="10sp"
-                android:fontFamily="@font/arialmt"
         />
 
         <androidx.appcompat.widget.AppCompatButton
@@ -412,7 +405,6 @@
                 android:textAllCaps="false"
                 android:textColor="@drawable/selected_text_color_status"
                 android:textSize="10sp"
-                android:fontFamily="@font/arialmt"
                 android:enabled="false"
 
         />
@@ -463,7 +455,6 @@
                 android:text="@string/english"
                 android:textColor="@color/turquoise_blue"
                 android:textSize="10sp"
-                android:fontFamily="@font/arialmt"
                 android:layout_marginStart="64.7dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -545,7 +536,6 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="16dp"
-                    android:fontFamily="@font/arialmt"
                     android:lineSpacingExtra="-9.9sp"
                     android:textAllCaps="false"
                     android:text="@string/mail_address_title"
@@ -575,7 +565,6 @@
                     android:id="@+id/tvPassword"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:fontFamily="@font/arialmt"
                     android:lineSpacingExtra="-9.9sp"
                     android:text="@string/password_title"
                     android:textColor="@color/black"
@@ -602,7 +591,6 @@
                     android:id="@+id/tvMailServer"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:fontFamily="@font/arialmt"
                     android:lineSpacingExtra="-9.9sp"
                     android:text="@string/incoming_email_server_title"
                     android:textColor="@color/black"
@@ -631,7 +619,6 @@
                     android:id="@+id/tvMailServerPort"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:fontFamily="@font/arialmt"
                     android:lineSpacingExtra="-9.9sp"
                     android:text="@string/incoming_email_server_port_title"
                     android:textColor="@color/black"
@@ -660,7 +647,6 @@
                     android:id="@+id/tvIsSSL"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:fontFamily="@font/arialmt"
                     android:lineSpacingExtra="-9.9sp"
                     android:text="@string/use_ssl_title"
                     android:textColor="@color/black"
@@ -688,7 +674,6 @@
                         android:checked="false"
                         android:drawableStart="@drawable/selector_ssl"
                         android:drawablePadding="10dp"
-                        android:fontFamily="@font/arialmt"
                         android:gravity="center"
                         android:text="@string/yes"
 
@@ -704,7 +689,6 @@
                         android:checked="true"
                         android:drawableStart="@drawable/selector_ssl"
                         android:drawablePadding="10dp"
-                        android:fontFamily="@font/arialmt"
                         android:gravity="center"
                         android:text="@string/no"
                         android:textColor="@color/black"
@@ -718,7 +702,6 @@
                     android:layout_height="wrap_content"
                     android:background="@color/green1"
 
-                    android:fontFamily="@font/arialmt"
                     android:lineSpacingExtra="-9.9sp"
                     android:text="@string/save"
                     android:textColor="@color/white"
